# Mechwarrior5AbsoluteJoystick

./: CMakeLists.txt  README.txt  main.c
SDL2/x86_64-w64-mingw32/lib/pkgconfig/: sdl2.pc
